<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Organizer</string>
    <string name="task_name">Задачи</string>
    <string name="buttonAddTask_name">Добавить</string>
    <string name="buttonCancel_name">Отменить</string>
    <string name="tvTaskAddName">Новая задача</string>
    <string name="tvTaskAddDescription">Описание задачи</string>
    <string name="tvTaskPriority">Приоритет</string>
    <string name="tvTaskPriorityDescription">0 - средний приоритет. Отрицательный для уменьшения, положительный для увеличения</string>

    <string name="labelTaskReplace">Перемещение задачи</string>
    <string name="buttonTaskReplaceCancel">Отмена</string>

    <string name="cmTaskHeader">Выберите действие</string>
    <string name="cmTaskEdit">Изменить</string>
    <string name="cmTaskDone">Завершить</string>
    <string name="cmTaskContinue">Вернуть</string>
    <string name="cmTaskDelete">Удалить</string>
    <string name="cmTaskReplace">Переместить</string>

    <string name="toastDeleteMessage">Удалена задача</string>
    <string name="deleteNothingMessage">Ничего не удалено</string>

    <string name="tvEditTaskName">Задача</string>
    <string name="tvEditTaskDescription">Новое описание</string>
    <string name="buttonSaveEditTask">Сохранить</string>
    <string name="savedEditMessage">Изменено</string>

    <string name="ErrorMessage">Произошла ошибка, обратитесь к разработчику</string>
    <string name="nothingToShowMessage">Нечего показывать. Создайте задачи</string>
    <string name="taskRootNameMessage">Переместить задачу в корневой каталог?</string>
    <string name="taskRootNameCap">Корневой каталог</string>
    <string name="searchHint">Строка поиска</string>
    <string name="dialogReplaceTitle">Переместить?</string>
    <string name="dialogReplaceMessage">Переместить задачу в </string>
    <string name="toastReplaceMessage">Перемещено в </string>

    <string name="dialogOk">Да</string>
    <string name="dialogCancel">Нет, не надо</string>

    <string name="dialogDeleteTitle">Удалить задачу?</string>
    <string name="dialogDeleteMessage">Безвозвратное удаление задачи и всех подзадач</string>

    <string name="box">Корзина</string>
    <string-array name="names">
        <item>Иван</item>
        <item>Марья</item>
        <item>Петр</item>
        <item>Антон</item>
        <item>Даша</item>
        <item>Борис</item>
        <item>Костя</item>
        <item>Игорь</item>
        <item>Анна</item>
        <item>Денис</item>
        <item>Вадим</item>
        <item>Ольга</item>
        <item>Сергей</item>
    </string-array>
</resources>
