<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTaskAddName"
            android:id="@+id/tvTaskName"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etTaskAddName"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTaskAddDescription"
            android:id="@+id/tvTaskDescription"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etTaskAddDescription"
            android:imeOptions="actionNext"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:minLines="3"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="16sp"
                android:text="@string/tvTaskPriority"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:text="0"
                android:id="@+id/etTaskPriority"/>
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/tvTaskPriorityDescription"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/buttonAddTask_name"
                android:id="@+id/buttonSaveTask"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/buttonCancel_name"
                android:id="@+id/buttonCancelSaveTask"/>
    </LinearLayout>

</LinearLayout>